--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "country-state-city": "^3.2.1",
     "lucide-react": "^0.453.0",
     "mongoose": "^8.7.2",
     "next": "14.2.15",
@@ -27,7 +28,7 @@
   },
   "devDependencies": {
     "@types/mongoose": "^5.11.97",
-    "@types/node": "^20",
+    "@types/node": "^22.7.9",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
