--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "country-state-city": "^3.2.1",
+    "crypto": "^1.0.1",
     "lucide-react": "^0.453.0",
     "mongoose": "^8.7.2",
     "next": "14.2.15",
