handle cors for access to api from admin app

--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@nextui-org/input": "^2.2.5",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@types/cors": "^2.8.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "country-state-city": "^3.2.1",
     "crypto": "^1.0.1",
     "lucide-react": "^0.453.0",
