--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "user-agent-parser": "^0.6.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
